cheeky refactor